samples/_failures_safe/1761205296_4070fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c164995.c: In function ‘main’:
./samples/SAFE/__tmp_8c164995.c:181:5: error: expected expression at end of input
  181 |     char input[
      |     ^~~~
./samples/SAFE/__tmp_8c164995.c:181:5: error: expected declaration or statement at end of input
